# ChangeLog for dev-util/cdiff
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cdiff/ChangeLog,v 1.11 2013/05/16 09:38:18 pinkbyte Exp $

  16 May 2013; Sergey Popov <pinkbyte@gentoo.org> cdiff-0.9.ebuild:
  Add ~amd64-linux and ~x86-linux keywords

  16 May 2013; Sergey Popov <pinkbyte@gentoo.org> cdiff-0.9.ebuild:
  Stable on amd64 and x86, wrt bug #470042

*cdiff-0.9 (28 Mar 2013)

  28 Mar 2013; Tom Wijsman <TomWij@gentoo.org> +cdiff-0.9.ebuild:
  Version bump to 0.9.

*cdiff-0.8 (13 Mar 2013)

  13 Mar 2013; Tom Wijsman <TomWij@gentoo.org> +cdiff-0.8.ebuild:
  Version bump to 0.8.

*cdiff-0.7.1 (12 Mar 2013)

  12 Mar 2013; Tom Wijsman <TomWij@gentoo.org> +cdiff-0.7.1.ebuild:
  Version bump to 0.7.1.

*cdiff-0.6 (22 Feb 2013)
*cdiff-0.7 (22 Feb 2013)

  22 Feb 2013; Tom Wijsman <TomWij@gentoo.org> +cdiff-0.6.ebuild,
  +cdiff-0.7.ebuild:
  Version bump to 0.6 and 0.7.

*cdiff-0.5.1 (19 Feb 2013)
*cdiff-0.5 (19 Feb 2013)

  19 Feb 2013; Tom Wijsman <TomWij@gentoo.org> +cdiff-0.5.1.ebuild,
  +cdiff-0.5.ebuild:
  Version bump, added 0.5 and 0.5.1.

*cdiff-0.4 (17 Feb 2013)

  17 Feb 2013; Tom Wijsman <TomWij@gentoo.org> +cdiff-0.4.ebuild:
  Version bump to 0.4.

  10 Feb 2013; Tom Wijsman <TomWij@gentoo.org> cdiff-0.3.ebuild:
  Block app-misc/colordiff since it installs a /usr/bin/cdiff wrapper. Fixes
  #456358.

*cdiff-0.3 (09 Feb 2013)

  09 Feb 2013; Tom Wijsman <TomWij@gentoo.org> +cdiff-0.3.ebuild, +metadata.xml:
  New package for cdiff. Contributed by Jan Matějka. Fixed bug #455624.