@@ -1,34 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST cdiff-0.3.tar.gz 10734 SHA256 0e7342a325f0d95261eb2e8c1b9271f63235ee4c5d24cbb39d02033658ec2b99 SHA512 ea27da03eee5a19369d20eb10ee5def04a0b26038956834234f2a7a680431d948524ad14e17774535f99ba67c8c99b481a0fd44fa92116e2b389775f14158b78 WHIRLPOOL 0bba1919ec52f8783768c17a04b88ac33d03a4ddac080655e9363a3d9aa436ac46ff17d2ca04c8530e3ee603e7c56997019e3bda0561a5d48192eb2070c3cfe0
-DIST cdiff-0.4.tar.gz 14153 SHA256 a3145d303915eaeb18a53134bcfec176e52a2f0ac5c407ad49c203c24fb1a6a0 SHA512 95485ef9c178f4fa3c9dc5f86fe87d4988e7f1a222b07f09f74b729f16d778d02d3839b753278426c87d967fbe39be5044f1d4385834e9d9aff2c8ce6da08fe8 WHIRLPOOL 41ae0f24157b97686e460518e332450334a41b9554320e9baa086703543d8cbe83a48c88076fa0695ccf1a45e26c277387a4b1091c4fd309d0942a1abdfa8e64
-DIST cdiff-0.5.1.tar.gz 18084 SHA256 4f0b2d0bcaf061a53910cc6b42342affef65d543e328455a914aa6e198bb5edd SHA512 56c99563520427eeb66ddf5d74a1a2da0121a76ba4ed24ff58e5c052a269d5b60dd3b919fa175420b5d384109a4ecae942c1e65da4a0da49b23b7890907134d8 WHIRLPOOL 4a8f40a1c2b77e6ae25fbf96dba8058fe267db2e6b944568af354df93fa5590167d291a5b445b9dacf1a4f17824b1e310a856acb7caa1d58a3adcd61bc6b9af7
-DIST cdiff-0.5.tar.gz 17719 SHA256 f6241da6ed304ef7a0423d06f88eb5f735c3d1498988c9251f2793885de66464 SHA512 b2394f3ef9ebca26b60314796305fa1364e425145ab7a18d4095a3b135e92207c31590467f7f16d0da7c7ae4ea7ed595805fc60965d33fd8fa60e984fe94a6bc WHIRLPOOL 3766b9416685ff9f6a51493f1ba5671ca7a0f70f81b88d042d39b266ef2ee6796265a367032f3e0745e2932d79a955b5dd167b4d972a7df91ba3335e5d0d7664
 DIST cdiff-0.6.tar.gz 20333 SHA256 7a5331203b0487e654532f8e5814b9cca42991e44d0c9904c3fed9393f1634a4 SHA512 05715e562cb2396c692c2e8b00722eb641ebe85c9de0292bce3950cee7feeece8159ec90fbc18fd59c9430abd783b6a31684dc9d61e0f79d7392c30096514b0a WHIRLPOOL 4a2b56b28975af6e51513550f2144edf21f71be40bf8bd846a9d095424d008196e5d15f3f7b3aa0208564dded4ef182e7c5e8ee6d379275307351553cfcace9e
 DIST cdiff-0.7.1.tar.gz 23274 SHA256 f14255941515ac6847680e80c6e0f2d6cd51145b6e784abc2adaf88648049b29 SHA512 da828eb2eef3024be59998bce7e10eba1beee904e27d21c920d2a5a38f1f95b0cd9fdcb6262f3eacb98bb78acafaa16d315e6b4ddf0a5342e0f55b0bdfb2926b WHIRLPOOL 7e62de4cdbe5867a22c34e13fb559227a2afaef770dad47c6d92708d986dd4bdbf7e2bfe18a11958016009de0d6ce16c8032243bd29c66e2cb63695f1e531542
 DIST cdiff-0.7.tar.gz 21709 SHA256 3f9f6c7600d473d7e41aefa2cace35a8906ef6e8692c4cc5c4aee08f6b57b82a SHA512 46f1ed34b2199ce2ffdfa4a182215700286e43dfae221825bbda43f36f566d651545da654d28bf07d480f1f37fb7ecf10489c6dacdebc51ce71cdcad73107f59 WHIRLPOOL 7689b32dec5368d537d4ddf891e07eef621f21c1865be06c34e58c6a6f41aff5714c23f337c7bbc7061537f430bac280798f41edb2bb984981b9e4bf789faea3
 DIST cdiff-0.8.tar.gz 24885 SHA256 3dc9d75fbe9e008c78e33692473a74359b849c086312eb047d0755b54f2318ef SHA512 b936d828e4e7dc46aab51109bb7d2ca850cca957f874d2acc84569f521e8f9a679e69bdb68881b66b3424bfa3d6cf81efc1ba4b2f2c9ae28754b66aaa6c48b02 WHIRLPOOL 0b06aa6399f125aee5c37460e464fc5ac9ea80159b8544ad61c739d73da3ba9f7b5d45d394d9868e2a6d7e626c77f73950d344537e61cf657c445fb2e7a7eed9
 DIST cdiff-0.9.tar.gz 28194 SHA256 fb22c1e7fefd1762e9df1666875da2312526f7d729c4bd07a47947898f4ae666 SHA512 9076309324b6cf3cf08ad2c0b322d53054a11650de827a3cd9a2b59d1788dac4f365944e562f10c7b0a60f792c664bb60d432ba175a5ae001578ac5ad34c4a52 WHIRLPOOL 9c715b9ea5d4de7460260ad13d22df1c6247276e96afe300b4bad20629f8a0b82627119443d37c9a1e93b4af1ed58ab2b459bcba5576c4948556e11ee6154031
-EBUILD cdiff-0.3.ebuild 610 SHA256 c5a27aedeb136a5d1ebb93329393329b94bd4bb7313bb1f50c8308e9b349b202 SHA512 f877828e7f1cfd0513a1243a0a445d38b8fb05e5d3e5d04df122252d8af7dbfe2f6bfb2d23f74738e1d4a195ef9054df36dedd4c3afc3052675c1e891eab39c2 WHIRLPOOL b1ca4993f249b2355ac1759ed22bbb43d403353e422998f9086b4f7b43704fb5085838def0b9c1a4c09ac2dd58a54ee76cb1ace5e811510e6fb51e775ee804c3
-EBUILD cdiff-0.4.ebuild 610 SHA256 3821194621f0b547ca428bccc7bff8747e4097496657dc2f5ec106f39db297ee SHA512 c4b1c1329a740b252134b758428c6e02ca0cf2c2ef7123bcd6996c511be36f54d39383e2b8677c724e5fa05981c2dffd0dac0ec76a170b5bbf3392ef8b42256a WHIRLPOOL 4a9d4fca4c7dc6c575c7fe02f98f9312cc28cd46b8c099cdbe1e22cfaf990a8e1c7ba9fb2734fb997e0eef95123675b7c180bcf30d189ff0a591dbf35afc045c
-EBUILD cdiff-0.5.1.ebuild 612 SHA256 de733c596a8f974a8c432f7c775cc176d6a6230e0155a9ab463ab0be40578692 SHA512 0958cf0bc2f4b628884f47274991a7ea7e8fb2b5b51b582b2be4e366617cd5f25a9c73afc8552264948c1d652fb55dfdc707316026283a64fac5fa8f48df8dfb WHIRLPOOL 966621649f1b0a1a13c906f14591910e0a936162a446699e8a85e049a5e4be3ed47a279514879d93e4633f556a772bd8aced42cef77b19bb536af943e5efe4c3
-EBUILD cdiff-0.5.ebuild 610 SHA256 eec8f5ad1c557950e4db8599b4b786f313f500cc5a5915feef6a05ebc29ab2b9 SHA512 8850fafe337b82f3c0483f74f21ac5f179455fe83e680937197d26580f5665e5fd77c73b2f8829af637c010f37ab62e789bb13da8f99f6bacf0b011c05f14f9b WHIRLPOOL 627cdfc5e20c8aa28e2dc7922fc0527ac4b75224689c5881e5a1b7d5f30b93b3b922a604f5413ee6cf014c81e43e2bf801200424d960b5bd0a149536c2e1945e
-EBUILD cdiff-0.6.ebuild 610 SHA256 f635a13397e644296618fab773a64291419d3dab90572cf94d0ff5aace8a3cde SHA512 8d1adeed9203e6af3978bf762e70b8affb5e3528985f2cb23ce5fab696648570a004a9ff111a621809f162180d3b8b255a9acc5eb914b3436094b4206fd98649 WHIRLPOOL 10825f25cd8eb9e4fad8fc5bc906b2034ba69f257e4ee37ef6373d0c03f19f2e306b97e27f35ed7fdd48d6863ada65038ab685edf733fb792a0bbe6d87f8b984
-EBUILD cdiff-0.7.1.ebuild 612 SHA256 492ca44a6fac8b9a303748a02bd763739784c2c3f81dd1423e5604c9b97cb505 SHA512 05f297e5fe42766d0d1cec5adf1d66a80542bf4b6351ac4627494278b98533a8dfa962c3f5a4df61dd4f98398a4f2c9a7dd673e163b351533425a6a40ace2dde WHIRLPOOL c8d9472e9c57da0e01f58eff999f05daf1d2bd0f6cc53c71514e29a94df5bba409b5b8b93a69e403a7a6b930dff1f61b713270e6b8cdecd1093373a8533ebabb
-EBUILD cdiff-0.7.ebuild 610 SHA256 5e9fcedd817d72a3797cb7b1959f125fa16e04d5cd0b3a824b09919ed3184134 SHA512 309cb10e955a6140a833b37b2472b232091cddb7eaa9cc616f8cea8c309f7856d1ea252bab2726cb4eae92cfcb27c2701c43defac559cb77a6e778fc635b3eed WHIRLPOOL 6a0677c8419aba473a31f948d74eeae38a609d7164c4fb2f9656ab632d1da9261d84a00f4be041bce13ae2fb2ebe8cafcfc65f15a7d83582ce903a4e9348a1a1
-EBUILD cdiff-0.8.ebuild 610 SHA256 17adbaf516b9bacfe65ab29737a1484df52ca9ea5b296a47d54e384ab933288d SHA512 cd0cb7d4209abe274f535159270e0ef1e72dbebc1b168bd20650961319a3fa04e0bf5ae50ec9c52f7b615456604ef367e38899b021d40aeb5fdc62d4f9a30533 WHIRLPOOL f09231e111c92b068463fb51895108226614ad9a30955dc37cdf5227da8a1482e6f192d693aa97a8b83472ec1bd24ffa7198fcc56a0f3aaf598afcab830f18ad
-EBUILD cdiff-0.9.ebuild 634 SHA256 d2944aec7c11e7d85fe61847a28d89b1a222d66ab1186705aff1ab985274a4c4 SHA512 028f07f00f6a27d997006ffd84a7b9a6499cfc29f1a68d2d38ac2c991a1c6507e83bbcfb83b72adf704d4ffefafc48cda5cd166f625e270758389bcf867f61e7 WHIRLPOOL 75cf1f4443278e73c52e0b9c62de45e4b12451067988b2e27422e38deee721c83153c316a89007da76ca58467b4bbc22cf98d3cbb045c94d925026d1ee00a668
-MISC ChangeLog 1582 SHA256 79804a4cf73d22f9f69c5a5501bc6248828e82097baab48c235865cac50b3b45 SHA512 890d5a4dbb3eefde46b97cd2047b380efd2ca64649841e976f118e63f5e2a7d91a2af4eb9b5637932e9589507024acd333ec20ae3b35556d0930e7663830e01f WHIRLPOOL 0009c7115c03a56ab23e7edad1a99305c255d0b8bf9dccf8ede7a7c79765a491d01aa4a80b905347f90f964f3ed245956f162b7c744c10dfcd64c980e65df6d0
+EBUILD cdiff-0.6.ebuild 625 SHA256 fbc5577bb3244364b15b13f9ecf9e55503399e317e68f61754dec878a3215f99 SHA512 7e2601621491322632bdade7849454ed18c75c49737f199c9a7044b5082ea7cc0c7267f4b13ffa38313081c7875d7f0774526c18afa68a4627135fd11084b04c WHIRLPOOL e7fb845db502a5cf0563efffdfbcf18922a2dc68e9a1e9435a140ec02d58b3f149244f18e8329b09ad2905832f9a8687b178388c60df120c4db54218cfb7bbe6
+EBUILD cdiff-0.7.1.ebuild 627 SHA256 41d559097b4d8a84003e935dc4ea0886b07d283d51dffb2b3f8a25d74ef358ca SHA512 94b78fc1bd6d6b18c7c20e85190c020e2141be9ab45e23b5e2b3d96ae0992abd36d1f63646b6974a1a729d8ac35fc5eda0e6418dfbfca5aaf91b985e3946919d WHIRLPOOL fa5a15e43d70d98a7e3ba849362e9c751b08621f4ca7f2ba41e53398d41eb3cf2b2402b0f4d45ef4df1bb12b84b32988518e88974f59a6120b974a22a685b20a
+EBUILD cdiff-0.7.ebuild 625 SHA256 8afdcfe6e8f5d2843c1d1ca71abe4672d9892f6dad52436b002a75cab179442b SHA512 91eff3b2894264efdb8af7f78deb8907566e68b3b751e9c42d863f6382e4e0b7d68e75a9af67bb666dbe83acbb8c6d5927ad7b69ad5ab6564b2c1c773ab51987 WHIRLPOOL cd04e82b1f92151bd299b48aa1777f41950bcb75d2cc76cd742d123b7a03b36575c1f7a1e9a82383275ebf5da37f9d956b7d5fb2479c904a8f3e6ad9df7f4d73
+EBUILD cdiff-0.8.ebuild 625 SHA256 c0fa02c25ac1d71fb07c3884712567030657ac8f17deac55c1a2860f51144448 SHA512 69ac63a3cc2ae3459f6130277693a57fce680c14543e23f7d62aa5e968ab723cee5f272e2802ecd18be28e00de1e4c7d2a6cade3985d34d7d0a5fa8415880b71 WHIRLPOOL 4367df00c96c07827589cb4827b903b740d1070f346e28185a08ed329ca7b1e75259ed089c7237323a07b17a4e9c105355287577da3224d813bbf0f593f12617
+EBUILD cdiff-0.9.ebuild 647 SHA256 78d25b309221d3251d5fe928201b55e1405a926f3c29cd97458577fd07fdf236 SHA512 6d91f25bf843b42f72d484da50b45e1a8cc7c5256b5fe3e23b4153b566b96ca563bf1d267e3277d048782f4ca5857586657bf25bb3cd6240dc399e1e03a880b4 WHIRLPOOL 8b1a5d53fc161ae49a23106e567391eaa7c22e68f36b9847a061cf793ce26cd6a9abaebc45101bd8026a55f5fbd77fef7d65d921f72308d94b0654558a77cdc7
+MISC ChangeLog 1913 SHA256 de4ced26a667b7d0f782be37e9249361c6ee6f5fc9131c402ab011d627490521 SHA512 8f5e90d153180a8184bdd99ae9a03bde9ddc22ed5041a39beab6948919b15255a5d28ac006838537275437c7409e1025af655693760b9c11499a32a581702776 WHIRLPOOL e60bae73dcda954060fa91c3d97c30c9bf84ea70159bf5d36de037ac6c4e878bf65cefca63b51c7b811b5746d7ade46015c5f801a0019850ade76593890d7eaf
 MISC metadata.xml 325 SHA256 3783ab40f01868b757a30df85e92623c84c638e0cd8f03d42b14d9e116c9528c SHA512 0071d980877c458ef28e3aa4a6ec0908662b73c47162f541ccc3f93734ed2043139e2df8fbca3cf9774ee8941d8c4ea09a70b73f0f08c267ae4212dd40d4b851 WHIRLPOOL d3803f5e46005cc8ac380075c56ca890274e23f36058ba7b317ea5f0081b70ec2e6f2a243c3419a8bfa3ac0650cf06023fcec10725a358c79e6e50ffd03d2e0d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRlKjoAAoJECo/aRed9267lhYH/2dtuXGt1YRhc7VbXqYyYbZk
-durjnoyEJ0oNLYthG6b2lnH9gWCIS28zMiJCPkss0PQ4knl4QBzaWOFFx9XO4EOr
-sG8kYFtTSRfkVJaLGEUkcQZTt+GjJI4cX0gZmkMFDVCYYDMmgZOO9a+yILd55ZGH
-Xh0M/GgaUmGhiqXR/CaUrWXjIlkMbVtxXUJIrs6sxqw3E8c3eqZXYBc6xjMQ14c2
-0hV5zNxI3S/kIqVeiUMTuX0bcFnH+cgYjyOv7Ac+Xu0BSZBEKGOtrA56OUgf1zNc
-9zZYctZUWewYxv50784C7QRdlghDaJyGwLmlf3tf0RKDD5DKaokVpcioxOXpeGM=
-=NkfV
+iQEcBAEBCAAGBQJRlQysAAoJEJWyH81tNOV9eE4IAMd7w05FPfRl1P4AzdKsdHUT
+X9XuULnYXcCbe6BgSPQS9aMeRkIxEADIty3Qbw+VWQ2HNhptoftIZB9dpDmQHb8U
+5m8WEewZTSMtRDDo40ILia/xVQpXNa3NCYkn9IhUxV+AQ84gReXcGJWvSua5ns6+
+iFqpk0jnyLk1Lz4KrgKsBamSRwyh3nRXRyeRr5QZpFJjPxwRHOpxdEgVz+OvLLVa
+zmpnFdt4idbNhNDyltxxRFhoJ3HKF6ioAN/h5stg9CX59eS0vK7ucfqZFty8PkGU
+rnsJsh8i7Xo3g3fx+L43+P5NYoLbLgpgHCp3NHT8D5dBJE0eUcTLOdScIwnxYUE=
+=EbKE
 -----END PGP SIGNATURE-----
