@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/cdiff
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cdiff/ChangeLog,v 1.11 2013/05/16 09:38:18 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cdiff/ChangeLog,v 1.12 2013/05/16 16:45:05 tomwij Exp $
+
+  16 May 2013; Tom Wijsman <TomWij@gentoo.org> -cdiff-0.3.ebuild,
+  -cdiff-0.4.ebuild, -cdiff-0.5.1.ebuild, -cdiff-0.5.ebuild, cdiff-0.6.ebuild,
+  cdiff-0.7.1.ebuild, cdiff-0.7.ebuild, cdiff-0.8.ebuild, cdiff-0.9.ebuild:
+  Explicitly depend on sys-apps/less, will look into reporting / patching this.
+  Dropped old (<0.6) versions.
 
   16 May 2013; Sergey Popov <pinkbyte@gentoo.org> cdiff-0.9.ebuild:
   Add ~amd64-linux and ~x86-linux keywords
